fix: align offset off by a couple pixels

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -1225,7 +1225,12 @@ p {
     border-radius: 8px;
   }
 
-  .theme-doc-sidebar-item-link-level-3,
+  .theme-doc-sidebar-item-link-level-3 {
+    .menu__link--active::before {
+      inset-inline-start: calc(0.25rem * 1);
+    }
+  }
+
   .theme-doc-sidebar-item-link-level-4 {
     .menu__link--active::before {
       inset-inline-start: 0px;
@@ -1283,10 +1288,6 @@ p {
     margin-block-end: calc(0.25rem * 1.5);
   }
 
-  .theme-doc-sidebar-item-link-level-3 > a {
-    margin-inline-start: -0.25rem;
-  }
-
   .theme-doc-sidebar-item-category-level-2 > .menu__list-item-collapsible {
     margin-inline-start: 0.18rem;
   }
@@ -1295,6 +1296,9 @@ p {
     &::after {
       right: 16.5%;
     }
+  }
+  .theme-doc-sidebar-item-link-level-3 > a {
+    margin-inline-start: -0.25rem;
   }
 
   .theme-doc-sidebar-item-category-level-3 > .menu__list-item-collapsible a {
